k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-platform
  namespace: task-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-platform
  template:
    metadata:
      labels:
        app: task-platform
    spec:
      containers:
        - name: task-platform
          image: devcontainer-task-platform:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
